--- a/GoogleCollabNotebook.ipynb
+++ b/GoogleCollabNotebook.ipynb
@@ -106,7 +106,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!python run_script.py \"Graphs/mixedtest2.txt\" \"Graphs/forbidden_minors_planar_graphs.txt\" --output-with \"graphswithminors.txt\" --output-without \"graphswithoutminors.txt\""
+        "!python run_script.py \"g6/graph4c.g6\" \"g6/graph3c.g6\" --output-with \"graphswithminors.g6\" --output-without \"graphswithoutminors.g6\""
       ],
       "metadata": {
         "id": "0-UEvulnDJRA"
